--- a/01_templating_with_concatenation/02_dump_into_file/index.html
+++ b/01_templating_with_concatenation/02_dump_into_file/index.html
@@ -1,12 +1,11 @@
 
-		<!DOCTYPE html>
+		<!Doctype html>
 		<html lang="en">
 			<head>
-				<meta charset="UTF-8">
-				<title>Larry's Back!</title>
+				<meta charset="utf-8">
 			</head>
 			<body>
-				<h1>Larry Okongo</h1>
+				<h1>My name is Larry Okongo</h1>
 			</body>
 		</html>
 	
